-[EXCEPTION] Rewritting the exception configuration and features following a new api implementation. Using generic code to allow composition of exception registrations.
